tests/fixtures/guardrails/invalid/webhook-imports-normalized-escape/app/routes/webhooks.app.uninstalled.ts
import { revokeBillingAccess } from "~/domain/webhooks/../billing/revoke.server";

export async function action() {
  return revokeBillingAccess();
}
